# dotfiles

./: .busted  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lua-format  .luacheckrc  .luacov  .luarc.json  .markdownlintignore  .prototools  Brewfile  Brewfile.lock.json  LICENSE  README.md  amethyst.plist  build.bat  clean.bat  clean.sh  cspell.config.yaml  edf  edf.bat  init-android.sh  init-macos.sh  init-osx.sh  init.bat  init.ps1  init.sh  initc.bat  setup.bat  setup.sh  taskfile.yaml  test.bat
.cspell/: dotfiles-common.txt  dotfiles-dictionary.txt  dotfiles-lua.txt  dotfiles-mycelio-dictionary.txt  dotfiles-stow.txt  dotfiles-unknown.txt  mycelio-dictionary.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  codacy.yml  code-check.yml  codeql.yml  docker.yml  dotfiles-critical.yml  dotfiles-docker.yml  main.yml  stow-build.yml  stow-critical.yml  stow-docker.yml  stow-nightly.yml
.osx/: co.fluder.FSNotes.plist  com.amethyst.Amethyst.plist  com.freron.MailMate.plist  com.googlecode.iterm2.plist  iterm2.plist
android/.termux/: termux.properties
bash/: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitignore_global  .profile
bash/.config/git/: ignore
bash/.config/micro/: init.lua  settings.json
bash/.gnupg/: gpg.conf
dev/: Dockerfile  run.bat
docker/: Dockerfile.nano  Dockerfile.windows
docs/: Docker.md  GNU-Stow.md  Home.md  Linux-and-Windows.md  Roadmap.md  Setup.md  TODO.md  Troubleshooting.md  Windows-Subsystem-for-Linux-(WSL).md
fish/: .base16_theme  .stow-local-ignore
fish/.config/fish/: config.fish  fishfile
git/: .gitconfig_common  .gitconfig_windows
linux/: .profile
linux/.config/micro/: bindings.json
linux/.poshthemes/: mycelio.omp.json
macos/: .limelightrc  .skhdrc  .yabairc
macos/.hammerspoon/: init.lua
macos/.ssh/: config
micro/: .stow-local-ignore
osx/: .chunkwmrc  .khdrc  .skhdrc
osx/.hammerspoon/: init.lua
osx/.ssh/: config
powershell/: Downoad-TexLive.ps1  Get-TexLive.ps1  Initialize-Environment.ps1  Initialize-PowerShell.ps1  Invoke-CmdScript.ps1  Invoke-Init.ps1  Profile.ps1  Write-EnvironmentSetup.ps1
python/.config/: flake8
ruby/: .default-gems
source/config/: .lua-style  .markdownlintignore  PSScriptAnalyzerSettings.psd1  configuration.dsc.yaml  wsl.conf.template
source/docker/: Dockerfile.alpine  Dockerfile.linux  Dockerfile.msys2  Dockerfile.ubuntu  Dockerfile.ubuntu.empty  Dockerfile.windows  Dockerfile.windows.nano  config.json
source/git/: .gitconfig_common  .gitconfig_wsl
source/macos/: Brewfile  com.if.Amphetamine.plist
source/media/: mycoshiro.ansi
source/perl/: initialize-cpan-config.pl
source/powershell/: Initialize-Environment.ps1  Initialize-PowerShell.ps1  Initialize-Sandbox.ps1  Invoke-CmdScript.ps1  Invoke-Init.ps1  Invoke-Setup.ps1  PSScriptAnalyzerSettings.psd1  Profile.ps1  Provision.ps1  Write-EnvironmentSetup.ps1
source/provisioning/: README.md  setup.sh  upgrade.sh
source/provisioning/arch/: makepkg.sh
source/setup/: main.sh  mycelio.sh
source/setup/apps/: stow.sh
source/setup/lib/: bash.sh  mycelio.sh  profile.sh
source/shell/: initialize-package-manager.sh  install-docker.sh  install-texlive.sh  lib.sh  main.sh  mycelio.sh  pgptest.sh  provision.sh  setup-secrets.sh  upgrade-package-manager.sh
source/shell/apps/: fzf.sh  git.sh  go.sh  hugo.sh  micro.sh  oh-my-posh.sh  powershell.sh  python.sh  stow.sh
source/shell/lib/: linux.sh  (+16 more)
source/standalone/: init.bat  init.ps1  init.sh  init.shbat  provision.ps1  sync.ps1
source/stow/: .dockerignore  .gitignore  .proverc  Build.PL  INSTALL.md  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.am  NEWS  README.md  _proverc  configure.ac  cpanfile  setup.bat  setup.sh  shell.bat
source/stow/.devcontainer/: Dockerfile  devcontainer.json
source/stow/.github/workflows/: build-test.yml  nightly.yml
source/stow/doc/: HOWTO-RELEASE  stow.texi  texinfo.tex
source/stow/docker/: Dockerfile  docker-build.sh  docker-test.sh
source/stow/lib/: Stow.pm.in
source/stow/lib/Stow/: Util.pm.in
source/stow/t/: chkstow.t  cleanup_invalid_links.t  dotfiles.t  examples.t  find_stowed_path.t  foldable.t  ignore.t  make_links.pl  make_links.t  rc_options.t  stow.t  testutil.pm  unstow.t  unstow_orig.t
source/stow/tools/: bootstrap-perls.sh  get-version  initialize-cpan-config.pl  install-dependencies.bat  install-dependencies.ps1  install-dependencies.sh  make-clean.bat  make-clean.sh  make-stow.bat  make-stow.sh  run-tests.bat  run-tests.sh  stow-environment.bat  stow-environment.sh
source/synology/: clean.sh  initialize-network-tunnel.sh  update-permissions.sh
source/vagrant/: Vagrantfile
source/windows/: cdbash.bat  cdmsys2.bat  cdsandbox.bat  cdwin.bat  env.bat  install-texlive.bat  profile.bat  stow.bat  test-container.bat
source/wsl/: wsl.conf.template
source/xplatform/: init.ps1
sup/: .mbsyncrc
sup/.lbdb/: ldap.rc  rc
templates/.gnupg/: gpg-agent.conf  gpg.conf
test/: bootstrap.sh  test.bats  test_base.bats  test_environment.sh  test_error_handling.bats  test_error_handling.sh  test_helper.bash  test_realpath.bats
test/docs/: example.texi  fdl.texi  version.texi
test/windows/: test_bash.bat  test_container_alpine.bat  test_container_ubuntu.bat  test_env.bat  test_init.bat  test_setup.bat
vim/: .vimrc
weechat/.weechat/: alias.conf  buffers.conf  irc.conf  plugins.conf  weechat.conf
windows/: build-stow.sh  cdbash.bat  cdd.bat  dockit.bat  env.bat  export.bat  install-tex-live.bat  ls.bat  pgptest.bat  powershell.bat  profile.bat  stow.bat  texlive.profile
windows/clink/: clink_settings  mycelio.lua
windows/clink-completions/: .appveyor.yml  .busted  .gitignore  RELEASENOTES.md  angular-cli.lua  coho.lua  cordova.lua  dotnet.lua  git_prompt.lua  kubectl.lua  nvm.lua  pip.lua  pipenv.lua  scoop.lua  vagrant.lua
windows/msys/: pacman-texlive.sh
windows/tex/: texlive-install.bat
xmonad/: .Xresources  .xmobarrc  .xprofile  .xsession
xmonad/.xmonad/: mail_unread.sh
zsh/: .zshrc
(+95 files in other folders)
